// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomType transform Explicit CustomType - required 1`] = `
"type Post @model @auth(rules: [{allow: public, provider: apiKey}])
{
  location: Location!
}

type Location 
{
  lat: Float
  long: Float
}"
`;

exports[`CustomType transform Explicit CustomType - with auth 1`] = `
"type Post @model @auth(rules: [{allow: public, provider: apiKey}])
{
  location: Location @auth(rules: [{allow: owner, ownerField: "owner"}])
}

type Location 
{
  lat: Float
  long: Float
}"
`;

exports[`CustomType transform Explicit CustomType 1`] = `
"type Post @model @auth(rules: [{allow: public, provider: apiKey}])
{
  location: Location
}

type Location 
{
  lat: Float
  long: Float
}"
`;

exports[`CustomType transform Explicit CustomType nests explicit CustomType 1`] = `
"enum PostStatus {
  unpublished
  published
}

type Post @model @auth(rules: [{allow: public, provider: apiKey}])
{
  meta: Meta
}

type Meta 
{
  status: PostStatus
  nestedMeta: AltMeta
}

type AltMeta 
{
  field1: String
}"
`;

exports[`CustomType transform Explicit CustomType nests explicit enum 1`] = `
"enum PostStatus {
  unpublished
  published
}

type Post @model @auth(rules: [{allow: public, provider: apiKey}])
{
  meta: Meta
}

type Meta 
{
  status: PostStatus
  publishedDate: AWSDate
}"
`;

exports[`CustomType transform Explicit CustomType nests implicit CustomType 1`] = `
"enum MetaStatus {
  unpublished
  published
}

type Post @model @auth(rules: [{allow: public, provider: apiKey}])
{
  meta: Meta
}

type Meta 
{
  status: MetaStatus
  nestedMeta: MetaNestedMeta
}

type MetaNestedMeta 
{
  field1: String
}"
`;

exports[`CustomType transform Explicit CustomType nests implicit enum type 1`] = `
"enum MetaStatus {
  unpublished
  published
}

type Post @model @auth(rules: [{allow: public, provider: apiKey}])
{
  meta: Meta
}

type Meta 
{
  status: MetaStatus
  publishedDate: AWSDate
}"
`;

exports[`CustomType transform Implicit CustomType 1`] = `
"type Post @model @auth(rules: [{allow: public, provider: apiKey}])
{
  location: PostLocation
}

type PostLocation 
{
  lat: Float
  long: Float
}"
`;

exports[`CustomType transform Implicit CustomType nests explicit CustomType 1`] = `
"enum PostMetaStatus {
  unpublished
  published
}

type Post @model @auth(rules: [{allow: public, provider: apiKey}])
{
  meta: PostMeta
}

type AltMeta 
{
  field1: String
}

type PostMeta 
{
  status: PostMetaStatus
  nestedMeta: AltMeta
}"
`;

exports[`CustomType transform Implicit CustomType nests explicit enum 1`] = `
"enum PostStatus {
  unpublished
  published
}

type Post @model @auth(rules: [{allow: public, provider: apiKey}])
{
  meta: PostMeta
}

type PostMeta 
{
  status: PostStatus
  publishedDate: AWSDate
}"
`;

exports[`CustomType transform Implicit CustomType nests implicit CustomType 1`] = `
"enum PostMetaStatus {
  unpublished
  published
}

type Post @model @auth(rules: [{allow: public, provider: apiKey}])
{
  meta: PostMeta
}

type PostMeta 
{
  status: PostMetaStatus
  nestedMeta: PostMetaNestedMeta
}

type PostMetaNestedMeta 
{
  field1: String
}"
`;

exports[`CustomType transform Implicit CustomType nests implicit enum type 1`] = `
"enum PostMetaStatus {
  unpublished
  published
}

type Post @model @auth(rules: [{allow: public, provider: apiKey}])
{
  meta: PostMeta
}

type PostMeta 
{
  status: PostMetaStatus
  publishedDate: AWSDate
}"
`;
